<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SearchImage</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnSearchLabel">Search</string>
    <string name="etQueryHint">Enter Search Item</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="lblSettings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="lblSettingsSize">Size :</string>
    <string name="lblSettingsColor">Color :</string>
    <string name="lblSettingsType">Type :</string>
    <string name="lblSettingsSite">Site :</string>
    <string name="lblSettingsSave">Done</string>

    <string-array name="settings_size">
        <item ></item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item >Xlarge</item>
    </string-array>

    <string-array name="settings_color">
        <item ></item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item >Black</item>
        <item >Brown</item>
    </string-array>

    <string-array name="settings_type">
        <item ></item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item >LineArt</item>
    </string-array>
        <string name="hintSettingsSite">Enter Site names</string>
    
</resources>
