<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Spinner
        android:id="@+id/spSettingsType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSettingsType"
        android:layout_alignBottom="@+id/tvSettingsType"
         />

    

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="57dp"
        android:text="@string/lblSettingsSize" />

    <TextView
        android:id="@+id/tvSettingsColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSettingsType"
        android:layout_below="@+id/spSettingsType"
        android:layout_marginTop="38dp"
        android:text="@string/lblSettingsColor" />

    <TextView
        android:id="@+id/tvSettingsType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSize"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="38dp"
        android:text="@string/lblSettingsType" />

    <Spinner
        android:id="@+id/spSettingsColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSettingsColor"
        android:layout_alignBottom="@+id/tvSettingsColor"
         />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSettingsType"
        android:layout_alignLeft="@+id/spSettingsColor" />

    <TextView
        android:id="@+id/tvSettingsSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvSettingsColor"
        android:layout_below="@+id/tvSettingsColor"
        android:layout_marginTop="38dp"
        android:text="@string/lblSettingsSite" />

    <EditText
        android:id="@+id/etSettingsSite"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSettingsSite"
        android:layout_alignBottom="@+id/tvSettingsSite"
        android:layout_toRightOf="@+id/tvSettingsColor"
        android:ems="10"
        android:hint="@string/hintSettingsSite" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSettingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSettingsSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickSave"
        android:text="@string/lblSettingsSave" />

</RelativeLayout>
